--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 <head>
   <meta charset="utf-8"> <!-- unicode character, for different languages -->
   <title>QCityhunter Personal Site</title>
+
+<style>
+
+body{
+  background-color: #03506f;
+}
+
+hr{
+  background-color:#03506f;
+  border-style: none;
+  border-top-style: dotted;
+  border-color: gray;
+  border-width: 5px;
+  width: 5%;
+}
+
+
+</style>
+
 </head>
 
 <body>
