--- a/index.html
+++ b/index.html
@@ -2,62 +2,94 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>EmersonM</title>
+  <meta charset="utf-8"> <!-- unicode character, for different languages -->
+  <title>QCityhunter Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="faviconqcity.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images/qcityimage.jpg" alt="qcityhunter image"></td>
+      <td>
+        <h1>Qcity Hunter</h1>
+        <p><em>Founder and CTO of <strong>QChunters</strong>.</em></p>
+        <p>I am Software Developer. I <3 coffee and beer! </p>
+      </td>
 
-  <div class="top-container">
-  <img class="top-cloud" src="images/cloud.png" alt="cloud.png">
-  <h1>I'm Emerson</h1>
-  <h2>a Software Engineer</h2>
-  <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-<img src="images/mountain.png" alt="cloud">
-  </div>
+    </tr>
+  </table>
 
-  <div class="middle-container">
-  <div class="profile">
-    <img src="images/qcityimage.jpg" alt="qcityhunter image">
-    <h2>Hello.</h2>
-    <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-  </div>
   <hr>
-  <div class="skills">
-    <h2>My Skills.</h2>
-    <div class="skill-row">
-      <img class="code-img "src="images/human.png" alt="">
-      <h3>Lorem & Ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-    </div>
-    <div class="skill-row">
-      <img class="code2-img" src="images/pc.png" alt="">
-      <h3>Lorem Ipsum Dolor</h3>
-      <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-    </div>
-  </div>
+  <h3>Books and Teaching</h3>
+  <ul>
+    <li>Techniques for targeting</li>
+    <li>The complete shooting bootcamp</li>
+  </ul>
   <hr>
-  <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-  </div>
-</div>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2014</td>
+        <td>Software Engineer Trainee</td>
+      </tr>
+      <tr>
+        <td>2015</td>
+        <td>Toyota - System Engineer</td>
+      </tr>
+    </tbody>
+  </table>
+
+<hr>
+<h3>My Skills</h3>
 
 
-<div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://qcityhunter.github.io/mySite/">Website</a>
-  <p>© 2021 QCityhunter.</p>
-</div>
 
+  <table cellspacing = "10">
+
+
+
+  <tr>
+    <td>Java Development</td>
+    <td>*****</td>
+  </tr>
+  <tr>
+    <td>MySql</td>
+    <td>*****</td>
+  </tr>
+  <tr>
+    <td>MsSql</td>
+    <td>*****</td>
+  </tr>
+  <tr>
+    <td>javascript</td>
+    <td>*****</td>
+  </tr>
+  <tr>
+    <td>Angular</td>
+    <td>*****</td>
+  </tr>
+  <tr>
+    <td>NodeJs</td>
+    <td>****</td>
+  </tr>
+  <tr>
+    <td>ReactJs</td>
+    <td>****</td>
+  </tr>
+  </table>
+
+<hr>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">Contact Me</a>
 
 </body>
 
